examples/Error/Demo3.mf
<#Module=Demo>

'---------------------------------------
#Include " " * function Debug() : msgbox "Include = " & mf_Err(2) & vbcrlf & "Number = " & mf_Err(0) & vbcrlf & "Text = " & mf_Err(1),,"Error" : end function

'---------------------------------------
#Include <..\Type\Dev_1_1.mf> * Debug
#Include <http://asdfjagfkafn.ru> * Debug
#Include <http://google.ru> * Debug
#Include <res://test> * msgbox mf_Err(0) & " - " & mf_Err(1)
#Include <http://langmf.ru/ftp/other/demo.mf> * Debug

'---------------------------------------
Sub Load(cmdLine)
    msgbox "Load App"
    msgbox Demo("OK")
    endmf
End Sub
<#Module>